[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/godot-xr-tools/staging/scene_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/maps/MapBase.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_tac_glove_low.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot-xr-tools/player/player_body.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_tac_glove_low.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_glide.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_physical_jump.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_climb.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_grapple.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_turn.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/godot-xr-tools/functions/function_pickup.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/godot-xr-tools/functions/function_pointer.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_direct.tscn" type="PackedScene" id=13]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_wind.tscn" type="PackedScene" id=14]
[ext_resource path="res://addons/godot-xr-tools/functions/movement_jump.tscn" type="PackedScene" id=15]
[ext_resource path="res://addons/godot-xr-tools/hands/materials/ghost_hand.tres" type="Material" id=17]
[ext_resource path="res://assets/freesound.org/565491__jakegwizdak__wind-loop.mp3" type="AudioStream" id=18]

[node name="MapBase" instance=ExtResource( 1 )]
script = ExtResource( 2 )
environment = null
next_map = ""

[node name="LeftHand" parent="ARVROrigin" index="1"]
visible = false

[node name="LeftHand" parent="ARVROrigin/LeftHand" index="0" instance=ExtResource( 5 )]
hand_material_override = ExtResource( 17 )

[node name="Function_Pickup" parent="ARVROrigin/LeftHand" index="1" instance=ExtResource( 11 )]
grab_collision_mask = 6
ranged_distance = 3.0
ranged_angle = 20.0
ranged_collision_mask = 4

[node name="Function_Direct_movement" parent="ARVROrigin/LeftHand" index="2" instance=ExtResource( 13 )]
enabled = false
order = 10
max_speed = 3.0
strafe = true

[node name="Function_Jump_movement" parent="ARVROrigin/LeftHand" index="3" instance=ExtResource( 15 )]
enabled = false
jump_button_id = 7

[node name="RightHand" parent="ARVROrigin" index="2"]
visible = false

[node name="RightHand" parent="ARVROrigin/RightHand" index="0" instance=ExtResource( 3 )]
hand_material_override = ExtResource( 17 )

[node name="Function_Pickup" parent="ARVROrigin/RightHand" index="1" instance=ExtResource( 11 )]
grab_collision_mask = 6
ranged_distance = 3.0
ranged_angle = 20.0
ranged_collision_mask = 4

[node name="Function_Turn_movement" parent="ARVROrigin/RightHand" index="2" instance=ExtResource( 10 )]

[node name="Function_Direct_movement" parent="ARVROrigin/RightHand" index="3" instance=ExtResource( 13 )]
enabled = false
order = 10
max_speed = 3.0
strafe = false

[node name="Function_Jump_movement" parent="ARVROrigin/RightHand" index="4" instance=ExtResource( 15 )]
enabled = false
jump_button_id = 7

[node name="Function_Grapple_movement" parent="ARVROrigin/RightHand" index="5" instance=ExtResource( 9 )]
enabled = false
grapple_collision_mask = 8

[node name="PlayerBody" parent="ARVROrigin" index="3" instance=ExtResource( 4 )]

[node name="Function_Climb_movement" parent="ARVROrigin" index="4" instance=ExtResource( 8 )]
enabled = false

[node name="Function_Glide_movement" parent="ARVROrigin" index="5" instance=ExtResource( 6 )]
enabled = false

[node name="Function_JumpDetect_Movement" parent="ARVROrigin" index="6" instance=ExtResource( 7 )]
enabled = false

[node name="Function_Wind_movement" parent="ARVROrigin" index="7" instance=ExtResource( 14 )]
enabled = false

[node name="FunctionPointer" parent="ARVROrigin" index="8" instance=ExtResource( 12 )]
enabled = false
laser_length = 1

[node name="Sounds" type="Node" parent="." index="1"]

[node name="Gliding" type="AudioStreamPlayer" parent="Sounds" index="0"]
stream = ExtResource( 18 )

[node name="GrappleFire" type="AudioStreamPlayer" parent="Sounds" index="1"]

[node name="RopeSwing" type="AudioStreamPlayer" parent="Sounds" index="2"]

[connection signal="grapple_finished" from="ARVROrigin/RightHand/Function_Grapple_movement" to="." method="_on_Function_Grapple_movement_grapple_finished"]
[connection signal="grapple_started" from="ARVROrigin/RightHand/Function_Grapple_movement" to="." method="_on_Function_Grapple_movement_grapple_started"]
[connection signal="player_glide_end" from="ARVROrigin/Function_Glide_movement" to="." method="_on_Function_Glide_movement_player_glide_end"]
[connection signal="player_glide_start" from="ARVROrigin/Function_Glide_movement" to="." method="_on_Function_Glide_movement_player_glide_start"]
